Fix header overlapping with the scrollbar

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,9 @@
 body, html {
     height: 100%;
     width: 100%;
+}
+
+body {
     overflow-x: hidden;
 }
 
